--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 baseurl                      : "/dactl/" # the subpath of your site,                         # e.g. /blog/
                               # set to '' in case of hosting on GitHub
 url                          : "" # the base hostname & protocol for your site
-                                  # `http://<username>.github.io` - for GitHub
+                                  # `http://didemuysal.github.io` - for GitHub
 
 blog:
   title                      : dactl
